--- a/ppc-borrow-frontend/project.config.json
+++ b/ppc-borrow-frontend/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.1",
-	"appid": "wx906f9bae73ca0a4d",
+	"appid": "xxx",
 	"projectname": "Bookshare%E5%80%9F%E4%B9%A6%E5%B0%8F%E7%A8%8B%E5%BA%8F",
 	"isGameTourist": false,
 	"condition": {
